2006-12-17  Abderrahim Kitouni  <a.kitouni@gmail.com>

	* bootstrap, configure.in : use intltool.

	* po/POTFILE.in : added desktop file and gconf schemas.

	* po/gprayer.pot : updated.

2006-12-07  Djihed Afifi  <djihed@gmail.com>

	* main.c : Add some logic to avoid displaying hours when there are 0.

	* data/gprayer.glade.in : unmarked non needed translations

	* defines.h : more complete gettext support (for plurals)

	* po/ar.po : more translations - testing if I'm missing any

	* AUTHORS : updated.

	* TODO : More information on what is needed.
	
2006-12-16  Abderrahim Kitouni  <a.kitouni@gmail.com>

	* main.c : Added i18n support (using gettext).

	* data/gprayer.schemas : Macca is GMT+3, and not -3.

	* defines.h : Added a shortcut for gettext

	* bootstrap : added a call to glib-gettextize.

	* po/ : Added POTFILE.in, gprayer.pot, and ar.po
	
	* configure.in, Makefile.am : added gettext support and po subdirectory.

	* data/gprayer.glade.in, src/Makefile.am : fixed pixmaps.
	
	* TODO : updated accordingly.

2006-12-07  Djihed Afifi  <djihed@gmail.com>

	* main.c : USE_NOTIFY checks.
	minimise to tray.

	* configure.in : libnotify checks.
	
	* gprayer.glade : Cleaner preferences.
	Added options to menu popup.

2006-12-07  Djihed Afifi  <djihed@gmail.com>

	* main.c : Added notifications using libnotify. 
	Added gtkstatusicon check to hide close button. 
	Added tray icon tooltip.
	Added Advanced preferences (method, notify..)

	* gprayer.glade: Advanced preferences. Close now quits.

	* configure.in: libnotify check.

	* gprayer.schemas: schemas for notif, notiftime, method.

	* prefs.h : New preferences.

2006-12-01  Djihed Afifi  <djihed@gmail.com>

	* Initial check in.