@@ -1,3 +1,7 @@
+2006-12-07  Djihed Afifi  <djihed@gmail.com>
+
+	* src/main.c : move defined PROGRAM_NAME to a var.
+
 2006-12-17  Abderrahim Kitouni  <a.kitouni@gmail.com>
 
 	* bootstrap, configure.in : use intltool.
